# factor-momentum

./: .gitignore  BacktestFramework.md  PCA_signals_expanding.parquet  README.md  backtest.py  backtest.sh  download_local.sh  dsl.py  pyproject.toml
logs/: factor_momentum_8263422.err  factor_momentum_8263422.out  factor_momentum_8263423.err
notebooks/: TEMP.ipynb  TEMP_testing.ipynb  backtest-plots.ipynb  backtest.py  pca.ipynb  regression_testing.ipynb  regressions.ipynb  signal-construction.ipynb  signal-mapping.ipynb
src/: backtest-plots.ipynb  factor_singal_construction.py  factors.ipynb  signal-mapping.ipynb  signal_mapping.py  universe_creation.ipynb
src/factor_momentum/: PCA.py  _PCA.py  __init__.py  _constants.py  _factor_signal_construction.py  _loaders.py  _map_signal_to_assets.py  _wrappers.py  constants.py  factor_momentum_signal.py  factor_signal_construction.py  map_signal_to_assets.py
src/notebooks/: signal-mapping.ipynb
src/research/: factor_momentum_service.py  seasons.py
tmp/: deciles.parquet  fama_french_factors.parquet
