[project]
name = "factor_momentum"
version = "0.1.0"
description = "Factor momentum signal construction and mapping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.7.2",
    "dataframely>=2.7.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sf-quant>=0.1.14",
    "tabulate>=0.9.0",
]

[tool.uv]
include-pip = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
